fix the alignment

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -41,7 +41,7 @@
   }
   
   #login-hero{
-    padding: 30px;
+    padding: 40px;
   }
 
   #output{
